# QuickWit

./: .gitignore  Makefile  README.md  history.json  pyproject.toml  quick_wit.py  settings.json
