[tool.poetry]
name = "quickwit"
version = "0.1.0"
description = ""
authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.23.5"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
